--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,7 @@
         </div>
       </section>
     </main>
+    <ul id="applicationList"></ul>
 
     <footer>
       <div class="footer-content">
